File Conflict - Ok button label is "Rename" instead of "Replace"
Affected version
- Nightly flatpak: Yes
- Other: 40.2 on Arch
Steps to reproduce
- Copy two files to a directory
- Copy the same files to the same directory to cause the Conflict dialog to appear
- Check: Apply this action to all files and folders
- Uncheck: Apply this action to all files and folders
Current behavior
Unchecking, Apply this action to all files and folders, the OK button label changes to "Rename"
Expected behavior
Unchecking, Apply this action to all files and folders, the OK button retain the label "Replace"