file-conflict-dialog: Don't change action when unchecking

The "Apply this action to all files and folders" checkbox works only
with the "Replace" action, not the "Rename" action. Indeed, if the
rename field is expanded, the checkbox is greyed out.

However, if the checkbox is checked, when unchecking it changes the
main action to Rename, despite the rename field being obviously
hidden (otherwise the checkbox wouldn't be checked). That's wrong.
It's a regression from 15d59cd18de13b1c09dae1fe07102e213cdd9fd4

When the checkbox is unchecked, the action is already "Replace", so
there is no need to change it.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1889